# efficient-llm-systems

./: .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: benchmark_evidence.yml  bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish-refract.yml  publish-turboquant-reference.yml
artifacts/: README.md
artifacts/benchmarks/legacy-raw/: README.md
components/refract/: CHANGELOG.md  INTERPRETATION.md  LEADERBOARD.md  LIMITATIONS.md  MATRIX-RESULTS.md  NOTICE  PITFALLS.md  QUICKSTART.md  README.md  pyproject.toml
components/refract/src/refract/: __init__.py  cli.py  report.py  report_html.py  runner.py  score.py
components/refract/src/refract/axes/: __init__.py  gtm.py  kld.py  plad.py  rniah.py  trajectory.py
components/refract/src/refract/backends/: __init__.py  base.py  llamacpp.py  mlx.py  sglang.py  vllm.py
components/refract/src/refract/examples/: README.md  catastrophic-symturbo.html  catastrophic-symturbo.json  clean-q8q8-mistral24b.html  clean-q8q8-mistral24b.json  degraded-qwen7b.html  degraded-qwen7b.json  distribution-broken-gemma26b.html  distribution-broken-gemma26b.json
components/refract/src/refract/prompts/: README.md  v0.1.jsonl
components/refract/tests/: _fixtures.py  conftest.py  test_axes_logic.py  test_axes_runs.py  test_backends.py  test_backends_kld.py  test_bugs.py  test_cli.py  test_cli_extra.py  test_cli_runs.py  test_cli_validation.py  test_command_construction.py  test_corpus_identity.py  test_examples.py  test_kld_regex.py  test_mlx_backend.py  test_report.py  test_report_extras.py  test_report_html.py  test_report_json_layout.py  test_runner.py  test_score.py  test_strip_noise.py  test_tokenize_to_ids.py  test_trajectory.py  test_unit.py  test_validation.py
components/turboquant-reference/: CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
components/turboquant-reference/benchmarks/archive/: benchmark_norm_correction.py  benchmark_ppl_tq_vs_rq.py
components/turboquant-reference/benchmarks/examples/: demo.py
components/turboquant-reference/benchmarks/experiments/: temporal_decay_prototype.py  test_outlier_comparison.py
components/turboquant-reference/benchmarks/runners/: benchmark_llama.sh  run_benchmark.py
components/turboquant-reference/benchmarks/validation/: test_with_llama.py  validate_real_model.py
components/turboquant-reference/src/turboquant/: __init__.py  codebook.py  hw_replay.py  kv_cache.py  outlier.py  polar_quant.py  qjl.py  rotation.py  turboquant.py  utils.py
components/turboquant-reference/tests/: test_codebook.py  test_distortion.py  test_hw_replay.py  test_kv_cache.py  test_niah.py  test_outlier.py  test_qjl.py  test_rotation.py  test_turbo4.py  test_turbo_hardware_diag.py  test_turboquant.py  test_utils.py
docs/: index.md
docs/guides/: getting-started.md  mlx-port.md  releasing.md  turboquant-recommendations.md  windows-rdna4-setup.md
docs/maintainers/: repository-settings.md
docs/reference/: benchmarks.md  hardware-comparison-matrix.md  historical-forks.md  test-suite-definition.md  weight-compression-results.md
research/: README.md
research/archive/: legacy-documentation-status.md  original-implementation-plan.md  turboquant-changelog.md  upstream-pr-plan.md
research/investigations/: asymmetric-kv-discovery.md  context-scaling-deep-dive.md  experiment-context-scaling-fix.md  m2-ppl-investigation.md  mlx-swift-pr14-gemma4-benchmark-brief.md
research/papers/: asymmetric-kv-compression.md  attn-rotation-and-ppl-artifact.md  block-selector-sparse-attention.md  block-size-experiment.md  cross-engine-mi300x.md  dflash-self-draft-investigation.md  eden-optimal-s-revisit.md  layer-aware-v-compression.md  longctx-1m-and-triattention.md  m5-max-stress-test.md  moe-v-compression-frontier.md  sparse-v-dequant.md  triattention-v3.md  turbo4-resurrection.md  weight-compression-tq4.md  why-mse-fails-for-kv-quantization.md
tools/: README.md
tools/benchmarks/: turbo-quick-bench.sh  turbo-realworld-bench.sh
tools/diagnostics/: turbo-diag  turbo_hardware_diag.py
tools/maintenance/: check_markdown_links.py  check_strict_json.py  check_wheel_contents.py  validate_citation.py
tools/validation/: measure_skip_rate.py  mlx_quality_suite.py  niah_test.py  turbo-quality-gate.sh
