[project]
name = "refract-llm"
version = "0.3.4"
description = "REFRACT — Reference-anchored Robust Acid-test for Compressed Transformers. Multi-axis KV-cache fidelity scoring for LLMs across llama.cpp, MLX, vLLM, and SGLang."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.9"
authors = [
    { name = "Dipesh Tharu Mahato (dipeshbabu)" },
]
keywords = [
    "llm",
    "kv-cache",
    "quantization",
    "evaluation",
    "fidelity",
    "llama-cpp",
    "mlx",
    "vllm",
    "sglang",
    "perplexity",
    "kld",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# The framework itself deliberately has no non-stdlib runtime dependencies.
# Backend extras opt into the libraries needed by each inference engine.
dependencies = []

[project.optional-dependencies]
refract-mlx = [
    "mlx>=0.20; sys_platform == 'darwin' and python_version >= '3.10'",
    "mlx-lm>=0.31; sys_platform == 'darwin' and python_version >= '3.10'",
]
refract-vllm = [
    "vllm>=0.5",
]
refract-sglang = [
    "requests>=2.28",
    "transformers>=4.40",
]
full = [
    "mlx>=0.20; sys_platform == 'darwin' and python_version >= '3.10'",
    "mlx-lm>=0.31; sys_platform == 'darwin' and python_version >= '3.10'",
    "vllm>=0.5",
    "requests>=2.28",
    "transformers>=4.40",
]
research = [
    "numpy>=1.23",
    "scipy>=1.10",
]
benchmarks = [
    "numpy>=1.23",
    "scipy>=1.10",
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.28",
]
dev = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/dipeshbabu/efficient-llm-systems/tree/main/components/refract"
Repository = "https://github.com/dipeshbabu/efficient-llm-systems"
Issues = "https://github.com/dipeshbabu/efficient-llm-systems/issues"
Changelog = "https://github.com/dipeshbabu/efficient-llm-systems/blob/main/components/refract/CHANGELOG.md"
"Cross-engine bench" = "https://github.com/dipeshbabu/efficient-llm-systems/blob/main/research/papers/cross-engine-mi300x.md"

[project.scripts]
refract = "refract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["refract*"]

[tool.setuptools.package-data]
refract = [
    "prompts/*.jsonl",
    "prompts/*.md",
    "examples/*.json",
    "examples/*.html",
    "examples/*.md",
]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
